--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "history": "^5.0.0",
     "jest": "^26.6.0",
     "lodash": "^4.17.21",
